Fixed text pagination on mobile

--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -46,7 +46,7 @@
     padding-bottom: 3rem;
     font-size: $text-size;
     img {
-      width: 25px;
+      width: 20px;
     }
   }
 
@@ -184,12 +184,13 @@
   height: 100%;
 
   @include laptop {
-    width: 10rem;
+    width: 12rem;
   }
 
   p {
     border-right: 2px solid $text-color;
     margin-right: 2rem;
+    text-align: center;
 
     @include laptop {
       border-right: 0;
